<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="11dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="?attr/actionBarSize" />



        <com.thustop_00.widgets.NotoEditText
            android:id="@+id/et_name_find"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            style="@style/EtStyle"
            android:textColor="@android:color/black"
            android:textColorHint="#979797"
            android:hint="@string/et_name_find"
            android:background="@drawable/outline_gray_b6"
            app:layout_constraintBottom_toTopOf="@id/et_phone_find"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guideline1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.15"
            app:layout_constraintVertical_chainStyle="packed"
            android:imeOptions="actionDone"
            />


        <com.thustop_00.widgets.NotoEditText
            android:id="@+id/et_phone_find"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_marginTop="20dp"
            style="@style/EtStyle"
            android:hint="@string/et_phone_find"
            android:textColorHint="#979797"
            android:background="@drawable/outline_gray_b6"
            app:layout_constraintTop_toBottomOf="@id/et_name_find"
            app:layout_constraintStart_toStartOf="@id/et_name_find"
            app:layout_constraintEnd_toEndOf="@id/et_name_find"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <com.thustop_00.widgets.NotoButton
            android:id="@+id/bt_confirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:background="@drawable/round_green"
            android:text="@string/bt_IssuePass_find"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            app:notoTextStyle="medium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/et_phone_find"
            app:layout_constraintStart_toStartOf="@id/et_phone_find"
            app:layout_constraintTop_toTopOf="@id/guideline1"
            app:layout_constraintVertical_bias="0.9" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>